feat(backend): implement last backend API GAP fixes
